--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -11,81 +11,257 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
         <include layout="@layout/layout_toolbar"/>
 
-        <!--<ImageView android:id="@+id/ivCarImage"-->
-                   <!--android:layout_width="match_parent"-->
-                   <!--android:layout_height="250dp"/>-->
+        <ImageView android:layout_width="match_parent"
+                   android:id="@+id/ivCarImage"
+                   android:layout_height="250dp"/>
 
-        <!--<LinearLayout android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_marginRight="@dimen/core_dimen_size_16dp"-->
-            <!--android:layout_marginLeft="@dimen/core_dimen_size_16dp">-->
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="@dimen/core_dimen_size_20dp"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
 
-        <!--<TextView android:id="@+id/tvCarName"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textSize="@dimen/core_font_size_16sp"-->
-            <!--android:text="BMW M2 Competiion"/>-->
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Tipe"/>
 
-        <!--<TextView android:id="@+id/tvCarPrice"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textColor="@color/colorBlue"-->
-            <!--android:textSize="@dimen/core_font_size_16sp"-->
-            <!--android:text="Rp 5,1 M"/>-->
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="3.0L M TwinPower Turbo Inline 6-Cylinder Petrol Engine with Turbocharger "/>
 
-        <!--<RatingBar-->
-            <!--android:id="@+id/rbCarRating"-->
-            <!--style = "?android:attr/ratingBarStyleSmall"-->
-            <!--android:theme="@style/RatingBar"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:numStars="4"-->
-            <!--tools:text="lorem"/>-->
+        </LinearLayout>
 
-        <!--<TextView android:id="@+id/tvDealerName"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Totok Dealer"/>-->
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
 
-        <!--<TextView android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="@dimen/core_dimen_size_16dp"-->
-            <!--android:text="Deskripsi"/>-->
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Kapasitas"/>
 
-        <!--<TextView android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="@dimen/core_dimen_size_8dp"-->
-            <!--android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.-->
-            <!--Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,-->
-            <!--when an unknown printer took a galley of type and scrambled it to make a type specimen book.-->
-            <!--It has survived not only five centuries, but also the leap into electronic typesetting,-->
-            <!--remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing-->
-            <!--Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker-->
-            <!--including versions of Lorem Ipsum."/>-->
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="2.979 cc"/>
 
-        <!--</LinearLayout>-->
+        </LinearLayout>
 
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tlCarDetail"
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Rasio Kompresi"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="10.2:1"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Power Max"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="410 HP"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Torsi Max"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="551 NM"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Bahan Bakar"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="Bensin"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Kecepatan Max"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="250 kmph"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Akselerasi"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="4,4 s"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                      android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                      android:orientation="horizontal">
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:text="Transmisi"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:text="M DCT 7-speed / 6-speed"/>
+
+        </LinearLayout>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginTop="@dimen/core_dimen_size_24dp"
+                  android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                  android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                  android:text="Review Pelanggan"/>
+
+        <RelativeLayout
+                android:id="@+id/layoutReview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/core_dimen_size_30dp">
 
-        </com.google.android.material.tabs.TabLayout>
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/cvUserImage"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:cardCornerRadius="@dimen/core_dimen_size_8dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp">
 
-        <androidx.viewpager.widget.ViewPager
-                android:id="@+id/vpCarDetail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <ImageView android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:src="@color/colorGrey"/>
 
-        </androidx.viewpager.widget.ViewPager>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                    android:id="@+id/llReview"
+                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="@dimen/core_dimen_size_12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/cvUserImage"
+                    android:orientation="vertical">
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textStyle="bold"
+                          android:text="Review"/>
+
+                <RatingBar
+                        android:id="@+id/rbCarRating"
+                        style = "?android:attr/ratingBarStyleSmall"
+                        android:theme="@style/RatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="4"
+                        tools:text="lorem"/>
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="05 Jul 2019, 10.10 Wib"/>
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="Mobilnya sesuai dan masih bersih, pengiriman baik"/>
+
+            </LinearLayout>
+
+            <Button android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnPilih"
+                    android:text="Pilih"
+                    android:layout_below="@+id/cvUserImage"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="@dimen/core_dimen_size_20dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                    android:background="@drawable/btn_blu"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
