--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,14 +1,247 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+              android:orientation="vertical"
              tools:context=".ui.menu.HistoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="#F4F4F4"
+                  android:orientation="vertical">
 
-</FrameLayout>
+        <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                           xmlns:app="http://schemas.android.com/apk/res-auto"
+                                           xmlns:tools="http://schemas.android.com/tools"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="?actionBarSize"
+                                           android:background="@color/colorBlue"
+                                           android:minHeight="?attr/actionBarSize"
+                                           app:layout_scrollFlags="enterAlways"
+                                           app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                                           app:titleTextColor="@color/colorWhite">
+
+            <RelativeLayout android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                <TextView
+                        android:id="@+id/tvToolbarInfoTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:layout_centerVertical="true"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/core_font_size_16sp"
+                        android:text="Aktifitas"
+                        tools:textColor="@android:color/white"/>
+
+            </RelativeLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/core_dimen_size_6dp"
+                        android:background="@color/colorWhite" >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_30dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_15dp"
+                    android:src="@drawable/car_example"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carName"
+                      android:textColor="#000000"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image"
+                      android:text="BMW M2 Competition"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carPrice"
+                      android:layout_below="@+id/carName"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image"
+                      android:textColor="@color/colorBlue"
+                      android:text="Rp 5,1 M"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:padding="@dimen/core_dimen_size_5dp"
+                      android:background="@drawable/bg_tv_accept"
+                      android:textSize="@dimen/core_font_size_10sp"
+                      android:layout_marginRight="@dimen/core_dimen_size_20dp"
+                      android:textColor="@color/colorBlue"
+                      android:layout_alignParentEnd="true"
+                      android:layout_centerVertical="true"
+                      android:text="Di setujui"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/core_dimen_size_6dp"
+                        android:background="@color/colorWhite" >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_30dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_15dp"
+                    android:src="@drawable/car_example"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carName2"
+                      android:textColor="#000000"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image2"
+                      android:text="BMW M2 Competition"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carPrice2"
+                      android:layout_below="@+id/carName2"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image2"
+                      android:textColor="@color/colorBlue"
+                      android:text="Rp 5,1 M"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:padding="@dimen/core_dimen_size_5dp"
+                      android:background="@drawable/bg_tv_waiting"
+                      android:textSize="@dimen/core_font_size_10sp"
+                      android:layout_marginRight="@dimen/core_dimen_size_20dp"
+                      android:textColor="#F1A042"
+                      android:layout_alignParentEnd="true"
+                      android:layout_centerVertical="true"
+                      android:text="Menunggu"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/core_dimen_size_6dp"
+                        android:background="@color/colorWhite" >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_30dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_15dp"
+                    android:src="@drawable/car_example"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carName3"
+                      android:textColor="#000000"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image3"
+                      android:text="BMW M2 Competition"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carPrice3"
+                      android:layout_below="@+id/carName3"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image3"
+                      android:textColor="@color/colorBlue"
+                      android:text="Rp 5,1 M"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:padding="@dimen/core_dimen_size_5dp"
+                      android:background="@drawable/bg_tv_reject"
+                      android:textSize="@dimen/core_font_size_10sp"
+                      android:layout_marginRight="@dimen/core_dimen_size_20dp"
+                      android:textColor="#B6B7BA"
+                      android:layout_alignParentEnd="true"
+                      android:layout_centerVertical="true"
+                      android:text="Di tolak"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/core_dimen_size_6dp"
+                        android:background="@color/colorWhite" >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image4"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_30dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_15dp"
+                    android:src="@drawable/car_example"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carName4"
+                      android:textColor="#000000"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image4"
+                      android:text="BMW M2 Competition"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textStyle="bold"
+                      android:id="@+id/carPrice4"
+                      android:layout_below="@+id/carName4"
+                      android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                      android:layout_toRightOf="@+id/profile_image4"
+                      android:textColor="@color/colorBlue"
+                      android:text="Rp 5,1 M"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:padding="@dimen/core_dimen_size_5dp"
+                      android:background="@drawable/bg_tv_waiting_car"
+                      android:textSize="@dimen/core_font_size_10sp"
+                      android:layout_marginRight="@dimen/core_dimen_size_20dp"
+                      android:textColor="#FFD204"
+                      android:layout_alignParentEnd="true"
+                      android:layout_centerVertical="true"
+                      android:text="Menunggu Mobil"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
