--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,14 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.menu.OrderFragment">
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                                       xmlns:tools="http://schemas.android.com/tools"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="match_parent"
+                                       xmlns:app="http://schemas.android.com/apk/res-auto"
+                                       android:orientation="vertical" android:fillViewport="true"
+                                       tools:context=".ui.menu.OrderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="#F4F4F4"
+                  android:orientation="vertical">
 
-</FrameLayout>
+        <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                           xmlns:app="http://schemas.android.com/apk/res-auto"
+                                           xmlns:tools="http://schemas.android.com/tools"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="?actionBarSize"
+                                           android:background="@color/colorBlue"
+                                           android:minHeight="?attr/actionBarSize"
+                                           app:layout_scrollFlags="enterAlways"
+                                           app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                                           app:titleTextColor="@color/colorWhite">
+
+            <RelativeLayout android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                <TextView
+                        android:id="@+id/tvToolbarInfoTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:layout_centerVertical="true"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/core_font_size_16sp"
+                        android:text="Pesanan"
+                        tools:textColor="@android:color/white"/>
+
+            </RelativeLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:layout_marginBottom="@dimen/core_dimen_size_4dp"
+                android:layout_marginTop="@dimen/core_dimen_size_4dp">
+
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/cvUserImage"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    app:cardCornerRadius="@dimen/core_dimen_size_8dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp">
+
+                <ImageView android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:src="@drawable/car_example"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                    android:id="@+id/llReview"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="@dimen/core_dimen_size_12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                    android:layout_toRightOf="@id/cvUserImage"
+                    android:orientation="vertical">
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textStyle="bold"
+                          android:text="BMW M2 Competition"/>
+
+                <RatingBar
+                        android:id="@+id/rbCarRating"
+                        style = "?android:attr/ratingBarStyleSmall"
+                        android:theme="@style/RatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="4"/>
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="Totok Dealer"/>
+
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="1"
+                              android:layout_marginTop="@dimen/core_dimen_size_20dp"
+                              android:orientation="horizontal">
+
+                    <LinearLayout android:layout_width="0dp"
+                                  android:layout_weight="1"
+                                  android:layout_height="wrap_content"
+                                  android:orientation="horizontal">
+
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_marginRight="@dimen/core_dimen_size_8dp"
+                                  android:text="Quantity :"/>
+
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textStyle="bold"
+                                  android:text="1"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout android:layout_width="0dp"
+                                  android:layout_weight="1"
+                                  android:gravity="end"
+                                  android:layout_height="wrap_content"
+                                  android:orientation="horizontal">
+
+                        <TextView android:id="@+id/tvCarPrice"
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@color/colorBlue"
+                                  android:text="Rp.5,1 M"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:layout_marginBottom="@dimen/core_dimen_size_4dp"
+                android:layout_marginTop="@dimen/core_dimen_size_6dp">
+
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/cvUserImage2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                    android:layout_marginBottom="@dimen/core_dimen_size_8dp"
+                    app:cardCornerRadius="@dimen/core_dimen_size_8dp"
+                    android:layout_marginLeft="@dimen/core_dimen_size_16dp"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp">
+
+                <ImageView android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:src="@drawable/car_example"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                    android:id="@+id/llReview2"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="@dimen/core_dimen_size_12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/core_dimen_size_16dp"
+                    android:layout_toRightOf="@id/cvUserImage2"
+                    android:orientation="vertical">
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:textStyle="bold"
+                          android:layout_marginTop="@dimen/core_dimen_size_8dp"
+                          android:text="BMW M2 Competition"/>
+
+                <RatingBar
+                        android:id="@+id/rbCarRating2"
+                        style = "?android:attr/ratingBarStyleSmall"
+                        android:theme="@style/RatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="4"/>
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="Totok Dealer"/>
+
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="1"
+                              android:layout_marginTop="@dimen/core_dimen_size_20dp"
+                              android:orientation="horizontal">
+
+                    <LinearLayout android:layout_width="0dp"
+                                  android:layout_weight="1"
+                                  android:layout_height="wrap_content"
+                                  android:orientation="horizontal">
+
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_marginRight="@dimen/core_dimen_size_8dp"
+                                  android:text="Quantity :"/>
+
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textStyle="bold"
+                                  android:text="1"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout android:layout_width="0dp"
+                                  android:layout_weight="1"
+                                  android:gravity="end"
+                                  android:layout_height="wrap_content"
+                                  android:orientation="horizontal">
+
+                        <TextView android:id="@+id/tvCarPrice2"
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@color/colorBlue"
+                                  android:text="Rp.5,1 M"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+
+</androidx.core.widget.NestedScrollView>
