--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#79BDE9</color>
     <color name="colorPrimaryDark">#79BDE9</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#79BDE9</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorRedCC">#cc5260</color>
     <color name="colorDarkBright">#151716</color>
@@ -12,4 +12,5 @@
     <color name="colorBlue">#79BDE9</color>
     <color name="homeBackground">#EFEFEF</color>
     <color name="colorGrey">#a2a2a2</color>
+    <color name="colorGreyTitle">#B6B7BA</color>
 </resources>
